edited to make it my own

--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
 </head>
 <body>
     <div class="title">
-        <h1>Fanpage : Pentatonix</h1>
+        <h1>Fanpage: Tears of the Kingdom"</h1>
     </div>
     <div class="intro">
-        <p>Welcome to my fanpage. </p>
-        <p>Here you can find some information about my favorite artist : Pentatonix</p>
+        <p>Welcome to my fanpage.</p>
+        <p>Here you can find some information about my favorite video game: Tears of the Kingdom</p>
 
-        <p>I really like this band, because all their songs are sung acapella.</p>
-        <p>That means, they don't use any instruments!</p>
-        <p>They do everything with their voices!</p>
+        <p>I really like this game because it gives you so much freedom to do anything you want.</p>
+        <p>It also greatly improves upon the prequel: Breath of the Wild</p>
+        <p>It's so much more extensive and it gives you so much room for creativity!</p>
     </div>
     <div class="youtube">
         <iframe width="560" 
                 height="315" 
-                src="https://www.youtube.com/embed/3MteSlpxCpo" 
+                src="https://www.youtube.com/embed/uHGShqcAHlQ" 
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen></iframe>
     </div>
     <div class="menu">
-        <a href="statistics.html"><input type="button" value="statistics"></a>
+        <a href="statistics.html"><input type="button" value="Statistics"></a>
     </div>
 </body>
 </html>
