--- a/statistics.html
+++ b/statistics.html
@@ -14,7 +14,11 @@
         <h2>Statistics</h2>
     </div>
     <div class="statistics">
-        Some statistics will be added later Here.
+        <p>Came out on May 12, 2023</p>
+        <p>Over 10 million copies were sold on the first 3 days of release alone, becoming the fastest-selling game in the series.</p>
+        <p>Price: $69.99 (still worth it)</p>
+        <p>It is one of the highest-rated games of all time, with a 96 score on Metacritic, and rated 2nd of this generation on OpenCritic.</p>
+        <p>It's a cool game :)</p>
     </div>
     <a href="index.html"><input type="button" value="back"></a>
 </body>
