--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="title">
-        <h1>Fanpage: Tears of the Kingdom"</h1>
+        <h1>Fanpage: Tears of the Kingdom</h1>
     </div>
     <div class="intro">
         <p>Welcome to my fanpage.</p>
