--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
     <div class="menu">
         <a href="statistics.html"><input type="button" value="Statistics"></a>
+        <a href="Photos.html"><input type="button" value="Photos"></a>
     </div>
 </body>
 </html>
