edited buttons to be properly capitalized

--- a/statistics.html
+++ b/statistics.html
@@ -20,6 +20,6 @@
         <p>It is one of the highest-rated games of all time, with a 96 score on Metacritic, and rated 2nd of this generation on OpenCritic.</p>
         <p>It's a cool game :)</p>
     </div>
-    <a href="index.html"><input type="button" value="back"></a>
+    <a href="index.html"><input type="button" value="Back"></a>
 </body>
 </html>
