--- a/photos.html
+++ b/photos.html
@@ -19,6 +19,6 @@
         <img src="img/totk trailer screen.jpeg">
         <img src="img/totk zonai car.jpeg">
     </div>
-    <a href="index.html"><input type="button" value="back"></a>
+    <a href="index.html"><input type="button" value="Back"></a>
 </body>
 </html>
